--- a/cashflow/client/src/styles/App.css
+++ b/cashflow/client/src/styles/App.css
@@ -1,10 +1,145 @@
 .negative {
-  color: red
+  color: red;
 }
 .positive {
-  color: green
+  color: green;
 }
+
+.home {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav {
+  background: #6f0f70;
+  height: 3.5rem;
+  display: flex;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.n-button {
+  text-decoration: none;
+  font-size: 1.3rem;
+  margin: 0 1rem;
+}
+.n-b-text {
+  -webkit-text-stroke: 0.1rem #641364;
+  background: -webkit-linear-gradient(
+    90deg,
+    #ffca0c,
+    #fec105,
+    #fdb800,
+    #fbae00,
+    #faa500,
+    #f79c00,
+    #f59303,
+    #f28a07
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.n-container {
+  display: flex;
+}
+.n-logo {
+  width: 10rem;
+}
+.main {
+  display: flex;
+  justify-content: center;
+}
+
+.bills {
+  background: white;
+  border-radius: 0.3rem;
+  width: 60rem;
+  height: 30rem;
+  margin: 0 3rem;
+  border: 0.1rem solid black;
+  -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+  -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+  box-shadow: 2px 2px 3px rgba(68, 68, 68, 0.6);
+}
+
 .transactions {
-  border: 1px solid black;
-  width: 30vw;
+  background: white;
+  border-radius: 0.3rem;
+  width: 15rem;
+  border: 0.1rem solid black;
+  -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+  -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+  box-shadow: 2px 2px 3px rgba(68, 68, 68, 0.6);
 }
+
+.bill {
+  font-size: 2rem;
+  margin: 1rem 2rem;
+}
+
+.h-b-logo {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.b-t-row {
+}
+
+.b-t-r-name-amount {
+  display: flex;
+  width: 50rem;
+  border-bottom: black solid;
+}
+
+.h-b-logo > img {
+  width: 25rem;
+  margin-top: 2rem;
+}
+
+.b-t-name {
+  position: relative;
+  width: 50rem;
+}
+
+.b-t-amount {
+  width: 5rem;
+}
+
+.b-t-button {
+  width: 5rem;
+  padding-left: 2rem;
+}
+
+.b-t-button > button {
+  background: -webkit-linear-gradient(
+    90deg,
+    #ffca0c,
+    #fec105,
+    #fdb800,
+    #fbae00,
+    #faa500,
+    #f79c00,
+    #f59303,
+    #f28a07
+  );
+  width: 5rem;
+  height: 2rem;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font-size: 1.2rem;
+  cursor: pointer;
+  border-radius: 2rem;
+}
+
+/* Structure */
+/* Main code is not operational */
+/* There are things that are added that shouldn't be there */
