--- a/cashflow/client/src/styles/index.css
+++ b/cashflow/client/src/styles/index.css
@@ -3,6 +3,6 @@ body {
   padding: 0;
   font-size: 10px;
   background:  linear-gradient(0deg, rgba(120, 33, 120, 0.9), #964A96, rgba(152, 0, 152, 0.4983), #6C096C);
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Righteous', cursive;
 }
 
