--- a/cashflow/client/src/styles/App.css
+++ b/cashflow/client/src/styles/App.css
@@ -188,3 +188,98 @@
   -webkit-text-fill-color: transparent;
   
 }
+.main-cashflow {
+  width: 80%;
+}
+.cashflow {
+  background: white;
+  border: 1px solid black;
+  border-radius: .5rem;
+  width: 100%;
+  height: 35vh;
+}
+
+.c-income-expenses {
+  display: flex;
+  justify-content: space-around;
+  font-size: 2rem;
+  margin-top: 1rem;
+
+}
+
+.income, .expense {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.c-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 3rem;
+
+  -webkit-text-stroke:.15rem #641364;
+  background: -webkit-linear-gradient(
+    90deg,
+    #ffca0c,
+    #fec105,
+    #fdb800,
+    #fbae00,
+    #faa500,
+    #f79c00,
+    #f59303,
+    #f28a07
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.c-logo {
+  width: 18rem;
+}
+
+.projections {
+  background: white;
+  border: 1px solid black;
+  border-radius: .5rem;
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  justify-content: space-around;
+}
+
+.arrows > img {
+  width: 5rem;
+  margin: 1rem -1.4rem;
+}
+
+.projections-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 4rem;
+  margin-top: .4rem;
+}
+
+.p-proj {
+  padding: 0 6rem;
+  font-size: 3rem;
+  -webkit-text-stroke:.1rem #641364;
+  background: -webkit-linear-gradient(
+    90deg,
+    #ffca0c,
+    #fec105,
+    #fdb800,
+    #fbae00,
+    #faa500,
+    #f79c00,
+    #f59303,
+    #f28a07
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.p-quarterly {
+  display: flex;
+}
