--- a/cashflow/client/src/styles/App.css
+++ b/cashflow/client/src/styles/App.css
@@ -24,6 +24,28 @@
   font-size: 1.3rem;
   margin: 0 1rem;
 }
+a.n-button {
+  -webkit-text-stroke: 1.2px #641364;
+  background-color: transparent;
+  border: none;
+  text-decoration: none;
+
+  font-family: 'Righteous', cursive;
+  /* margin: 0 1rem; */
+  background: -webkit-linear-gradient(
+    90deg,
+    #ffca0c,
+    #fec105,
+    #fdb800,
+    #fbae00,
+    #faa500,
+    #f79c00,
+    #f59303,
+    #f28a07
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .n-b-text {
   -webkit-text-stroke: 1.2px #641364;
   background: -webkit-linear-gradient(
@@ -39,7 +61,6 @@
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  
 }
 
 .n-container {
@@ -57,22 +78,25 @@
   background: white;
   border-radius: 0.3rem;
   width: 55rem;
-  height: 30rem;
+  height: 500px;
   margin: 0 3rem;
   border: 0.1rem solid black;
   -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
   -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
   box-shadow: 2px 2px 3px rgba(68, 68, 68, 0.6);
+  overflow-y: auto;
 }
 
 .transactions {
   background: white;
   border-radius: 0.3rem;
-  width: 15rem;
+  width: 20rem;
   border: 0.1rem solid black;
   -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
   -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
   box-shadow: 2px 2px 3px rgba(68, 68, 68, 0.6);
+  overflow-y: auto;
+  height: 500px;
 }
 
 .bill {
@@ -89,7 +113,6 @@
   cursor: pointer;
   outline: inherit;
 }
-
 
 .b-t-r-name-amount {
   display: flex;
@@ -155,16 +178,20 @@
 
 .transaction {
   width: 97%;
-  padding: .1rem 1rem;
+  padding: 0.1rem 1rem;
 }
 
 .t-t-row {
   font-size: 1rem;
-  justify-content: space-between;
   display: flex;
- 
-  
+  text-align: center;
 }
+
+.t-t-row td {
+  flex-grow: 1;
+  flex-basis: 100px;
+}
+
 /* Structure */
 /* Main code is not operational */
 /* There are things that are added that shouldn't be there */
@@ -186,17 +213,22 @@
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  
 }
 .main-cashflow {
   width: 80%;
 }
 .cashflow {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background: white;
   border: 1px solid black;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   width: 100%;
-  height: 35vh;
+  height: 50vh;
+  text-align: center;
+  padding: 2em 0;
+  /* height: 35vh; */
 }
 
 .c-income-expenses {
@@ -204,10 +236,10 @@
   justify-content: space-around;
   font-size: 2rem;
   margin-top: 1rem;
-
 }
 
-.income, .expense {
+.income,
+.expense {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -219,7 +251,7 @@
   align-items: center;
   font-size: 3rem;
 
-  -webkit-text-stroke:.15rem #641364;
+  -webkit-text-stroke: 0.15rem #641364;
   background: -webkit-linear-gradient(
     90deg,
     #ffca0c,
@@ -241,11 +273,41 @@
 .projections {
   background: white;
   border: 1px solid black;
-  border-radius: .5rem;
-  width: 100%;
-  height: 20vh;
+  border-radius: 0.5rem;
+  width: 70%;
+  height: 10vh;
   display: flex;
+  margin: 0 auto;
   justify-content: space-around;
+
+  background: linear-gradient(180deg, rgba(120, 33, 120, 0.9), #b914b9);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.projections span {
+  font-size: 3rem;
+  -webkit-text-stroke: 0.1rem #641364;
+  background: -webkit-linear-gradient(
+    90deg,
+    #ffca0c,
+    #fec105,
+    #fdb800,
+    #fbae00,
+    #faa500,
+    #f79c00,
+    #f59303,
+    #f28a07
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.projections > div {
+  display: flex;
+  flex-direction: column;
+  margin: auto 0;
+  font-size: 2em;
 }
 
 .arrows > img {
@@ -258,13 +320,13 @@
   align-items: center;
   justify-content: center;
   height: 4rem;
-  margin-top: .4rem;
+  margin-top: 0.4rem;
 }
 
 .p-proj {
   padding: 0 6rem;
   font-size: 3rem;
-  -webkit-text-stroke:.1rem #641364;
+  -webkit-text-stroke: 0.1rem #641364;
   background: -webkit-linear-gradient(
     90deg,
     #ffca0c,
@@ -282,4 +344,94 @@
 
 .p-quarterly {
   display: flex;
+}
+
+.resources-page {
+  display: grid;
+  height: 100%;
+  grid-template-columns: 1fr, 1fr;
+  grid-template-rows: 0;
+  padding: 2em;
+  column-gap: 20px;
+}
+
+.resource-article-container {
+  grid-column: 1;
+  background: white;
+  padding: 1em;
+  height: 89%;
+}
+
+.resource-article + .resource-article {
+  margin-top: 8em;
+}
+
+.book-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 50vw;
+  height: 300px;
+  grid-column: 2;
+  min-height: unset;
+  gap: 20px;
+  justify-items: center;
+  align-items: center;
+}
+
+.book-container img {
+  height: 200px;
+}
+
+.cashflow-main {
+  border: 1px solid black;
+  width: 70%;
+  height: 300px;
+  border-radius: 10px;
+  margin: 0 auto;
+
+  background: linear-gradient(180deg, rgba(120, 33, 120, 0.9), #b914b9);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.projections-with-arrows {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.projections-with-arrows img {
+  width: 100px;
+  margin: 1rem -2rem;
+}
+
+.projections-with-arrows h1 {
+  font-size: 3rem;
+  -webkit-text-stroke: 0.06rem #641364;
+  background: -webkit-linear-gradient(
+    90deg,
+    #ffca0c,
+    #fec105,
+    #fdb800,
+    #fbae00,
+    #faa500,
+    #f79c00,
+    #f59303,
+    #f28a07
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.budget-button {
+  background: #6f0f70;
+  border: none;
+  color: white;
+  width: 150px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 40px;
+  cursor: pointer;
 }
